--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:latest
     container_name: postgresql
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
     ports:
-      - "8001:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - ~/.pg-data/testTask:/var/lib/postgresql/data
