--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node ./src/main.ts",
+    "start": "npx ts-node ./src/main.ts",
     "start:dev": "nodemon ./src/main.ts",
+    "db": "npx ts-node scripts/db/index.ts",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.6",
     "nodemon": "^2.0.16",
     "ts-node": "^10.9.2"
   },
