--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.26.0",
     "typescript": "^5.5.3"
   }
