--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "npx ts-node ./src/main.ts",
+    "start": "npx ts-node -r tsconfig-paths/register ./src/main.ts",
     "start:dev": "nodemon ./src/main.ts",
-    "db": "npx ts-node scripts/db/index.ts",
+    "db": "npx ts-node -r tsconfig-paths/register ./scripts/db/index.ts",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/pg": "^8.11.6",
+    "@types/yup": "^0.32.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.9.2"
   },
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "yup": "^1.4.0"
   }
 }
