--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": "./",
     "types": ["node"],
     "paths": {
-      "@db/*": ["./db/*"]
+      "@db/*": ["src/db/*"],
+      "@repository/*": ["src/repository/*"]
     }
   },
   "exclude": ["node_modules"]
