--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-quick-crypto": "^0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -19,6 +20,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-native": "^4.1.0",
     "react-test-renderer": "18.2.0"
