--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-native": "^4.1.0",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0"
   }
 }
