--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-useragent": "^1.0.5",
+    "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.6",
     "@types/yup": "^0.32.0",
     "nodemon": "^2.0.16",
@@ -23,6 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-useragent": "^1.0.15",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "yup": "^1.4.0"
   }
