--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,9 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-quick-crypto": "^0.7.1"
+    "react-native-quick-crypto": "^0.7.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
