--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@common/*": ["../common/src/*"]
+      "@common/*": ["../common/src/*"],
+      "@store/*": ["src/store/*"],
+      "@components/*": ["src/components/*"]
     }
   },
 }
