--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
     "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-date-picker": "^5.0.4",
     "react-native-quick-crypto": "^0.7.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.4.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
@@ -28,6 +35,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-native": "^4.1.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0"
   }
 }
