--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
